fixed firefox settings not applied on firefox, added note when favorites is empty, attempted to use github actions

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -84,6 +84,8 @@
   border-radius: 10px;
   width: 7.5em;
   height: 7.5em;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .thumbnail.active {
